syntax = "proto3";

package product;

option go_package = "go-shop/service/product-service/proto;productpb";

service ProductService {
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
    int64 id = 1;
}

message GetProductResponse {
    int64 id = 1;
    string name = 2;
    double price = 3;
}
